# arborium-rt

./: .gitattributes  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.github/workflows/: build.yml  publish.yml  test.yml
cli/: package.json  tsconfig.json
cli/src/: arborium-yaml.ts  bootstrap.ts  build-all.ts  build-grammar.ts  build-host.ts  build-node-grammars.ts  build-node.ts  build-wasm.ts  flatten.ts  grammar-clone.ts  index.ts  main.ts  package-all.ts  stage-grammar.ts  util.ts  write-grammars-index.ts  write-third-party-notices.ts
cli/src/commands/: bootstrap.ts  build.ts
cli/src/commands/package/: grammars.ts  host.ts
cli/src/commands/package/wasm/: grammars.ts  host.ts
cli/src/lib/: arborium-yaml.ts  grammar-clone.ts  native-manifest.ts  node-manifest.ts  stage-grammar.ts  util.ts  write-grammars-index.ts  write-third-party-notices.ts
cli/test/: flatten.test.mts
ffi/android/: Cargo.toml
ffi/android/src/: lib.rs
ffi/node/: Cargo.toml  build.rs
ffi/node/src/: lib.rs
js/: README.md  package-lock.json  package.json  tsconfig.json
js/src/: abi.ts  index.ts  runtime.ts
js/src/cli/: arborium-yaml.ts  bootstrap.ts  build-all.ts  build-package.ts  main.ts  publish.ts  stage-dist.ts  util.ts
js/test/: arborium.test.mts  flatten.test.mts
langs/group-moss/prolog/def/: arborium.yaml
langs/group-moss/prolog/def/grammar/: grammar.js
langs/group-moss/prolog/def/queries/: LICENSE  highlights.scm
lib/native/: Cargo.toml  build.rs
lib/native/src/: lib.rs
lib/node/: Cargo.toml  build.rs
lib/node/src/: lib.rs
lib/wasm/: Cargo.toml
lib/wasm/src/: lib.rs
patches/: 0002-stub-arborium-theme-builtin_generated.patch
patches/arborium/: 0001-gate-static-tree-sitter-linking-off-on-emscripten.patch  0003-kotlin-highlights.scm-rewrite-chain-method-patterns-.patch  0003-wire-add-timed_out-to-ParseResult-plugin-runtime-enf.patch  0004-swift-highlights.scm-rewrite-chain-method-and-chain-.patch
patches/tree-sitter/: 0001-sparse-only-render.patch
scripts/: arborium-rt  release
src/: abi.rs  highlight.rs  lib.rs  registry.rs
