[package]
name = "arborium-rt"
version = "0.1.0"
edition = "2024"
description = "Shared arborium plugin runtime packaged as an emscripten SIDE_MODULE"
license = "MIT"

[workspace]
members = ["lib/wasm"]
# The root `arborium-rt` package is just the target-agnostic rlib; the
# publishable artifact is the `arborium-rt-wasm` cdylib SIDE_MODULE. Default a
# bare `cargo build --release` to that member (it pulls the rlib in as a
# dependency) so the build emits `arborium_rt_wasm.wasm` without `-p`/`--workspace`.
default-members = ["lib/wasm"]
exclude = ["third_party"]

[dependencies]
arborium-plugin-runtime = { path = "third_party/arborium/crates/arborium-plugin-runtime" }
arborium-tree-sitter    = { path = "third_party/arborium/crates/arborium-tree-sitter" }
arborium-wire           = { path = "third_party/arborium/crates/arborium-wire" }
arborium-highlight      = { path = "third_party/arborium/crates/arborium-highlight", default-features = false }
arborium-theme          = { path = "third_party/arborium/crates/arborium-theme", default-features = false }
serde                   = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json              = { version = "1.0", default-features = false, features = ["std"] }

[profile.release]
opt-level = "z"
lto = false
codegen-units = 1
panic = "abort"
strip = false
