[package]
name = "arborium-rt"
version = "0.1.0"
edition = "2024"
description = "Shared arborium plugin runtime packaged as an emscripten SIDE_MODULE"
license = "MIT"

[workspace]
members = ["lib/wasm", "lib/native", "ffi/node", "ffi/android"]
# A bare `cargo build` builds only the target-agnostic core `arborium-rt`
# rlib, natively. `lib/native` is the shared static-grammar core the FFI shims
# depend on. The deployable shims are per-target and must NOT be built by
# default — `lib/wasm` only links for emscripten, `ffi/node`/`ffi/android` need
# a staged grammar manifest (and `ffi/android` an NDK toolchain). Build each
# explicitly:
#   ./scripts/arborium-rt build wasm runtime   # arborium-rt-wasm SIDE_MODULE
#   ./scripts/arborium-rt build node           # arborium-rt-node addon
#   ./scripts/arborium-rt build android        # libarborium_rt.so per ABI
default-members = ["."]
exclude = ["third_party"]

[dependencies]
arborium-plugin-runtime = { path = "third_party/arborium/crates/arborium-plugin-runtime" }
arborium-tree-sitter    = { path = "third_party/arborium/crates/arborium-tree-sitter" }
arborium-wire           = { path = "third_party/arborium/crates/arborium-wire" }
arborium-highlight      = { path = "third_party/arborium/crates/arborium-highlight", default-features = false }
arborium-theme          = { path = "third_party/arborium/crates/arborium-theme", default-features = false }
serde                   = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json              = { version = "1.0", default-features = false, features = ["std"] }

[profile.release]
opt-level = "z"
lto = false
codegen-units = 1
panic = "abort"
strip = false
