[package]
name = "arborium-rt-android"
version = "0.1.0"
edition = "2024"
description = "Statically-linked arborium runtime as an Android JNI shared library (libarborium_rt.so)"
license = "MIT"
publish = false

[lib]
# `cdylib` → one `libarborium_rt.so` per Android ABI, loaded by the AAR's
# Kotlin binding via `System.loadLibrary("arborium_rt")`.
name = "arborium_rt"
crate-type = ["cdylib"]

[dependencies]
arborium-rt = { path = "../.." }
# The shared static-grammar core. Its build.rs compiles every grammar and its
# `cargo:rustc-link-lib=static=…` directives propagate into this cdylib, so
# there is no build.rs here.
arborium-rt-native = { path = "../../lib/native" }
anyhow = "1"
jni = "0.21"
serde_json = "1"
