[package]
name = "arborium-rt-node"
version = "0.1.0"
edition = "2024"
description = "Statically-linked arborium runtime as a Node.js native addon"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
arborium-rt = { path = "../.." }
arborium-rt-native = { path = "../../lib/native" }
arborium-tree-sitter = { path = "../../third_party/arborium/crates/arborium-tree-sitter" }
napi = { version = "3", default-features = false, features = ["napi8"] }
napi-derive = "3"

[build-dependencies]
napi-build = "2"
