[package]
name = "arborium-rt-node"
version = "0.1.0"
edition = "2024"
description = "Statically-linked arborium runtime as a Node.js native addon"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
arborium-rt = { path = "../.." }
arborium-tree-sitter = { path = "../../third_party/arborium/crates/arborium-tree-sitter" }
napi = { version = "2", default-features = false, features = ["napi8"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
cc = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
